# TD_UvManagedPrefab

./: .gitignore  .packagefolder  .touchdesigner-version  Project.toe  README.md  TDPyEnvManagerContext.json  main.py  pyproject.toml
AppData/Scripts/: sys.py
