[project]
name = "td-uvmanagedprefab"
version = "0.0.1"

description = "A prefab for TouchDesigner-Projects that will be complelty managed and run by UV."
readme = "README.md"
requires-python = "==3.11.1"
dependencies = [
    "py-touchutilcollection",
    "tdp-examplecomp",
    "touchlaunch",
    "typing-extensions>=4.14.1",
]
keywords=["TouchDesigner"]

[tool.touchdesigner]
projectfile = "Project.toe"
enforce-version="closest-build" # Options: strict, closest-build, latest-build, latest-version

[tool.uv]
environments = [
    "sys_platform =='win32'",
    "sys_platform =='darwin'"
]

[tool.uv.sources]
touchlaunch = { git = "https://github.com/PlusPlusOneGmbH/Py_TD_Launch" }
tdp-examplecomp = { git = "https://github.com/PlusPlusOneGmbH/TD_Package", subdirectory = "Packages/ExampleComp" }
py-touchutilcollection = { git = "https://github.com/PlusPlusOneGmbH/Py_TouchUtilCollection" }

